<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PrivacyPolicy">
<LinearLayout
    android:layout_margin="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/privacy_policy1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:text="@string/privacy_policy_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/privacy_policy2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:text="@string/privacy_policy_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/hyperlink1"
        android:lineSpacingExtra="5sp"
        android:text="@string/hyperlink1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/hyperlink2"
        android:lineSpacingExtra="5sp"
        android:text="@string/hyperlink2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/hyperlink3"
        android:lineSpacingExtra="5sp"
        android:layout_marginBottom="10dp"
        android:text="@string/hyperlink3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/privacy_policy3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginBottom="10dp"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:text="@string/privacy_policy_txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/privacy_policy4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginBottom="10dp"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:text="@string/privacy_policy_txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/privacy_policy5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:text="@string/privacy_policy_txt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:lineSpacingExtra="5sp"
        android:text="@string/bullet1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:lineSpacingExtra="5sp"
        android:text="@string/bullet2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:lineSpacingExtra="5sp"
        android:text="@string/bullet3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:lineSpacingExtra="5sp"
        android:text="@string/bullet4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:text="@string/privacy_policy_txt12"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/privacy_policy6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginBottom="10dp"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:text="@string/privacy_policy_txt6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/privacy_policy7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginBottom="10dp"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:text="@string/privacy_policy_txt7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/privacy_policy8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginBottom="10dp"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:text="@string/privacy_policy_txt8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
</ScrollView>