<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TermsConditions">
    <LinearLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/termsConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5sp"
            android:text="@string/termsPara1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5sp"
            android:text="@string/termsPara2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5sp"
            android:text="@string/termsPara3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/link1"
            android:lineSpacingExtra="5sp"
            android:text="@string/hyperlink1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/link2"
            android:lineSpacingExtra="5sp"
            android:text="@string/hyperlink2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/link3"
            android:lineSpacingExtra="5sp"
            android:layout_marginBottom="10dp"
            android:text="@string/hyperlink3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5sp"
            android:text="@string/termsPara4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5sp"
            android:text="@string/termsPara5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5sp"
            android:text="@string/termsPara6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5sp"
            android:text="@string/termsPara7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5sp"
            android:text="@string/termsPara8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5sp"
            android:text="@string/termsPara9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5sp"
            android:text="@string/termsPara10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/termsPara11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:justificationMode="inter_word"
            android:lineSpacingExtra="5sp"
            android:text="@string/termsPara12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</ScrollView>