<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/editTextWhite"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".ResetPasswordActivity">

    <!--SignUp ImageView signup_icon starts-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/edreset_img"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginRight="30dp"
            android:src="@drawable/bookmartlogo" />

        <TextView
            android:id="@+id/txtreset_changephoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
    <!--SignUp ImageView signup_icon ends-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/primaryText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/forgot_password_msg"
        android:textColor="@color/primaryText"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_email" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/editTextWhite"
                android:gravity="center|left"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="EMAIL ADDRESS"
                android:textColor="@color/primaryText"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/reset_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/secondaryText"
                android:gravity="center|left"
                android:hint="Enter Email Address"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/primaryText"
                android:textColorHint="@color/secondaryText" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reset_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:background="@color/colorPrimary"
        android:text="Reset Password"
        android:textColor="@color/editTextWhite" />

    <ProgressBar
        android:id="@+id/reset_progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:indeterminateTint="@color/buttonLogin"
        android:visibility="gone" />

</LinearLayout>